style.css
/* STYLESHEET */
body{
	font-family: "Open Sans", Arial;
	overflow: hidden;
}
#wrapper {
}
#poem_content {
	display: block;
	width: 240px;
	padding: 20px;
	height: 1000px;
	float: left;
	background-color: #eeeeee;
}
#poem_content h1{
	color: #999999;
	font-family: "Nunito";
	font-size: 2em;
}
#poem_content h2{
	color: #aaaaaa;
	font-family: "Nunito";
	font-size: 1.5em;
}
#poem_hidden{
	display:none;
}
#main_content{
	left: 280px;
	float: left;
	position: fixed;
}
#canvas{
	display: block;
	float: left;
	margin: 20px;
	width: 520px;
	height: 380px;
	border: 1px solid #dddddd;
}
#picker{
	border-top: #eeeeee solid 1px;
	/*display: block;*/
	display:none;
	float: left;
	background-color: #f9f9f9;
	padding: 10px;
	clear: both;
	width: 2000px;
	height: 400px;
	color: #444444;
	font-size: 0.9em;
}
#picker h1{
	/* border-bottom: 1px solid #cccccc; */
	padding-bottom: 8px;
	font-size: 1.3em;
	color: #777777;
	margin-bottom: 6px;
}
p{
	color: #444444;
	font-size: 0.9em;
	margin-top: 15px;
	line-height: 1.3em;
}
.circle_logo_1 {
	display: inline-block;
	position: relative;
	top: -2px;
	left: 6px;
	width: 14px;
	height: 14px;
	background: #10e138;
	-moz-border-radius: 7px;
	-webkit-border-radius: 7px;
}
.circle_logo_2 {
	display: inline-block;
	position: relative;
	top: -16px;
	left: 8px;
	width: 10px;
	height: 10px;
	background: #ffa000;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}

.circle {
	display: inline-block;
	position: absolute;
	top: 10px;
	left: 10px;
	width: 40px;
	height: 40px;
	-moz-border-radius: 40px;
	-webkit-border-radius: 40px;
	border: solid 3px #ffffff;
	-webkit-box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
	-moz-box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
	box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
}
.c0 {
	background-color: #f8f8f8;
	left:253px;
	top:183px;
}
.c1 {
	background: #1b1527;
	left:329px;
	top:183px;
}
.c2 {
	background: #83c0d7;
	left:177px;
	top:183px;
}
.c3 {
	background: #70e165;
	left:291px;
	top:111px;
}
.c4 {
	background: #e64a22;
	left:215px;
	top:111px;
}
.c5 {
	background: #ffa000;
	left:291px;
	top:255px;
}
.c6 {
	background: #ffb0df;
	left:215px;
	top:255px;
}
ul {

}
li{
	display: inline-block;
	border-left-color: #ffffff;
	border-top-color: #ffffff;
	border-right-color: #617c91;
	border-bottom-color: #617c91;
	border-right-style: solid;
	border-left-style: solid;
	border-bottom-style: solid;
	border-top-style: solid;
	border-width: 1px;
	margin-top: 10px;
	margin-right: 10px;
	background-color: #A5B9BF;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	
}
li a{
	padding: 6px;
	width: 160px;
	height: 32px;
	color: #000000;
	text-decoration: none;
	display: block;
	line-height: 1.2em;
	
}
li a:hover{
	background-color: #ffffff;
	text-decoration: none;
	display: block;
	opacity: 0.5;
	
}

